# mining_energy_consumption

./: .gitignore  README.md  TEST_hash_rate_scrapper.py  chart_API.py  config.py  countries.db  countries_fetch.py  data_fetch_calc.py  energy_calculation.py  hash_rate_scrapper.py  index.html  miners.db  pyproject.toml  requirements.txt  sample_CONFIG.yml  server.js
.github/workflows/: demo_api_deploy.yml  demo_frontend_deploy.yml  frontend_demo_deploy.yml  production_api_deploy.yml  production_frontend_deploy.yml
api/: chart_API.py  wsgi.py
api/data_source/: base.py  coinmetrics.py
frontend/: .gitignore  README.md  nuxt.config.js  package-lock.json  package.json  test_ci
frontend/assets/: flags.json  newData.json  oldData.json
frontend/assets/js/: filters.js
frontend/assets/style/: _main.scss  app.styl  main.css
frontend/components/: Cards.vue  Chart.vue  Chart2.vue  Chart3.vue  ChartLoading.vue  ComparisonsCards.vue  ComparisonsPC.vue  ComparisonsRP.vue  Controllers.vue  Cookie.vue  loading.vue
frontend/components/comparisons/: Countries.vue  FF.vue  Histogram.vue  MaskMars.vue  PC.vue  RP.vue
frontend/components/contact/: Feedback.vue  Team_contributors.vue
frontend/components/index/: Cards.vue  (+3 more)
frontend/layouts/: default.vue  demo.vue
frontend/middleware/: cookies.js
frontend/pages/: change-log.vue  comparisons.vue  contact.vue  demo.vue  faq.vue  index.vue  login.vue  methodology.vue  qanda.vue
frontend/plugins/: ga.js  katex2js.js  latex2js.js
frontend/store/: index.js
server_config/: countries.csv  custom_data_setup.py  miners.csv
(+14 files in other folders)
