[tool.poetry]
name = "mining_energy_consumption"
version = "0.1.0"
description = ""
authors = ["dektox <a.dek@jbs.cam.ac.uk>", "chesanovskiy_dv <chesanovskiydv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pandas = "^1.2.1"
requests = "^2.25.1"
Flask-Cors = "^3.0.10"
psycopg2 = "^2.8.6"
PyYAML = "^5.4.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
